--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:mysql://localhost/exemple
-jdbc.user=mysql
-jdbc.pass=root
-hibernate.hbm2ddl.auto=validate
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost/geotest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.user=root
+jdbc.pass=admin
+hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
