--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.category.org.springframework.data.document.mongodb=INFO
 log4j.rootLogger = INFO, CATALINA
-log4j.appender.CATALINA.File = ${catalina.base}/logs/CentralConsumer.log
+log4j.appender.CATALINA.File = ${catalina.base}/logs/server.log
 log4j.appender.CATALINA.Append = true
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %40.40c:%4L - %m%n
