--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://148.60.11.220/geotest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost/geotest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.user=root
-jdbc.pass=eva1rgD
+jdbc.pass=admin
 hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
