Ajout de typeMonument et ajout de methode dans VarianteCarteRepository et AncienNomRepository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/geotest?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.user=root
 jdbc.pass=admin
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=verify
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
